Bug encountered, Submission doesn't work. and breaks the app.

--- a/team-builder/src/index.css
+++ b/team-builder/src/index.css
@@ -61,4 +61,5 @@ button[disabled] {
 .team-members{
   margin:3px;
   padding:2px;
+  padding-bottom: 20px;
 }
